After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737580 - PresentationOutputChooser fixes
PresentationOutputChooser fixes
Status: RESOLVED FIXED
Product: gnome-documents
Classification: Core
Component: general
3.14.x
Other All
: Normal normal
: ---
Assigned To: GNOME documents maintainer(s)
GNOME documents maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-29 12:11 UTC by Debarshi Ray
Modified: 2014-09-30 15:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
presentation: Make OutputChooser unresizable (1.07 KB, patch)
2014-09-29 16:20 UTC, Debarshi Ray
committed Details | Review
presentation: Use a header bar (975 bytes, patch)
2014-09-29 16:20 UTC, Debarshi Ray
committed Details | Review
presentation: Ensure the builtin display is first in the list (886 bytes, patch)
2014-09-29 16:21 UTC, Debarshi Ray
committed Details | Review
presentation: Add a status string to describe each output (3.38 KB, patch)
2014-09-29 16:21 UTC, Debarshi Ray
accepted-commit_now Details | Review
presentation: Show a thumbnail for each display (16.69 KB, patch)
2014-09-29 16:22 UTC, Debarshi Ray
committed Details | Review
presentation: Prevent inactive displays from being selected (1.10 KB, patch)
2014-09-29 16:22 UTC, Debarshi Ray
committed Details | Review
presentation: Frame the list and give each row a header (2.18 KB, patch)
2014-09-29 16:51 UTC, Debarshi Ray
committed Details | Review
presentation: Add a status string to describe each output (3.33 KB, patch)
2014-09-29 16:53 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2014-09-29 12:11:45 UTC
Various sundry fixes and improvements. See patches.
Comment 1 Debarshi Ray 2014-09-29 16:20:29 UTC
Created attachment 287369 [details] [review]
presentation: Make OutputChooser unresizable
Comment 2 Debarshi Ray 2014-09-29 16:20:52 UTC
Created attachment 287370 [details] [review]
presentation: Use a header bar
Comment 3 Debarshi Ray 2014-09-29 16:21:21 UTC
Created attachment 287371 [details] [review]
presentation: Ensure the builtin display is first in the list
Comment 4 Debarshi Ray 2014-09-29 16:21:53 UTC
Created attachment 287372 [details] [review]
presentation: Add a status string to describe each output
Comment 5 Debarshi Ray 2014-09-29 16:22:18 UTC
Created attachment 287373 [details] [review]
presentation: Show a thumbnail for each display
Comment 6 Debarshi Ray 2014-09-29 16:22:42 UTC
Created attachment 287374 [details] [review]
presentation: Prevent inactive displays from being selected
Comment 7 Cosimo Cecchi 2014-09-29 16:26:20 UTC
Review of attachment 287369 [details] [review]:

Looks good
Comment 8 Cosimo Cecchi 2014-09-29 16:26:34 UTC
Review of attachment 287370 [details] [review]:

Looks good
Comment 9 Cosimo Cecchi 2014-09-29 16:26:59 UTC
Review of attachment 287371 [details] [review]:

Good catch
Comment 10 Cosimo Cecchi 2014-09-29 16:29:19 UTC
Review of attachment 287372 [details] [review]:

Nice
Comment 11 Cosimo Cecchi 2014-09-29 16:33:49 UTC
Review of attachment 287373 [details] [review]:

Looks good
Comment 12 Cosimo Cecchi 2014-09-29 16:34:26 UTC
Review of attachment 287374 [details] [review]:

OK
Comment 13 Debarshi Ray 2014-09-29 16:51:14 UTC
Created attachment 287376 [details] [review]
presentation: Frame the list and give each row a header
Comment 14 Debarshi Ray 2014-09-29 16:53:05 UTC
Created attachment 287377 [details] [review]
presentation: Add a status string to describe each output

A minor tweak. Set border_width to 12 instead of setting margin_top, margin_bottom to 5.
Comment 15 Debarshi Ray 2014-09-29 17:00:08 UTC
Thanks for taking a look, Cosimo!
Comment 16 Cosimo Cecchi 2014-09-29 17:48:14 UTC
Review of attachment 287376 [details] [review]:

OK
Comment 17 Cosimo Cecchi 2014-09-29 17:48:42 UTC
Review of attachment 287377 [details] [review]:

OK