presentation: Show a thumbnail for each display

Based on cc-display-panel.c from gnome-control-center.

https://bugzilla.gnome.org/show_bug.cgi?id=737580